# spaceShooter

./: CMakeLists.txt  readme.md
inc/: Game.h  Object.h  Scene.h  SceneEnd.h  SceneMain.h  SceneTitle.h
src/: Game.cpp  Scene.cpp  SceneEnd.cpp  SceneMain.cpp  SceneTitle.cpp  main.cpp
